# serde_state

./: Cargo.toml  README.md
serde_state/: Cargo.toml
serde_state/src/: lib.rs
serde_state/tests/: derive_named_struct.rs
serde_state_derive/: Cargo.toml
serde_state_derive/src/: attrs.rs  de.rs  lib.rs  mode.rs  ser.rs  type_decl.rs
