[package]
name = "serde_state_derive"
version = "1.0.0"
authors = ["Guillaume Boisseau <nadrieril+git@gmail.com>"]
edition = "2021"

[lib]
name = "serde_state_derive"
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true, features = ["proc-macro"] }
syn = { workspace = true, features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"] }
